# LLaVA

./: README.md  pyproject.toml
llava/: conversation.py
llava/eval/: eval_gpt_review.py  model_qa.py  model_vqa.py  run_llava.py  summarize_gpt_review.py
llava/model/: __init__.py  builder.py  llava_arch.py
llava/model/language_model/: llava_mistral.py
llava/model/multimodal_encoder/: builder.py  clip_encoder.py
llava/model/multimodal_projector/: builder.py
llava/serve/: controller.py  gradio_web_server.py  model_worker.py
llava/train/: train.py
scripts/v1_5/: pretrain.sh
